--- a/calculadora-angular/angular.json
+++ b/calculadora-angular/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "calculador-angular": {
+    "calculadora": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/calculador-angular",
+            "outputPath": "dist/calculadora",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,7 +24,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
           },
@@ -62,18 +63,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "calculador-angular:build"
+            "browserTarget": "calculadora:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "calculador-angular:build:production"
+              "browserTarget": "calculadora:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "calculador-angular:build"
+            "browserTarget": "calculadora:build"
           }
         },
         "test": {
@@ -110,15 +111,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "calculador-angular:serve"
+            "devServerTarget": "calculadora:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "calculador-angular:serve:production"
+              "devServerTarget": "calculadora:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "calculador-angular"
+  "defaultProject": "calculadora"
 }
